--- a/views/mymetro.handlebars
+++ b/views/mymetro.handlebars
@@ -10,15 +10,15 @@
 
     <form class="form new-project-form">
       <div class="form-group">
-        <label for="project-name">Trip name:</label>
+        <label for="projt-name">Trip name:</label>
         <input class="form-input" type="text" id="trip-name" name="trip-name" />
       </div>
       <div class="form-group">
-        <label for="project-funding">Start time:</label>
+        <label for="start-time">Start time:</label>
         <input class="form-input" type="number" id="start-time" name="start-time" />
       </div>
       <div class="form-group">
-        <label for="project-desc">Nearest station:</label>
+        <label for="nearest-station">Nearest station:</label>
         <textarea class="form-input" id="nearest-station" name="nearest-station"></textarea>
       </div>
       <div class="form-group">
