--- a/views/mymetro.handlebars
+++ b/views/mymetro.handlebars
@@ -10,7 +10,7 @@
 
     <form class="form new-project-form">
       <div class="form-group">
-        <label for="projt-name">Trip name:</label>
+        <label for="trip-name">Trip name:</label>
         <input class="form-input" type="text" id="trip-name" name="trip-name" />
       </div>
       <div class="form-group">
