--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,7 +24,7 @@
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
               <nav>
@@ -33,24 +33,28 @@
                 <a href="/mymetro">My Metro</a> |
                 <button class="no-button" id="logout">Logout</button>
                 {{else}}
-                <a href="/login">Login</a>
-                <a class="nav-link" href="/">Metros</a>
-                {{/if}}
-              </nav>
+            <li class="nav-item">
+              <a href="/login">Login</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/mymetro">My Metro</a>
-              {{!-- <a class="nav-link" href="/">Metros</a> --}}
+              <a class="nav-link" href="/">Metros</a>
             </li>
-            <li class="nav-item">
-              <!-- Render script for logged in users only -->
-              {{#if logged_in}}
-              <script src="/js/logout.js"></script>
-              {{/if}}
-            </li>
-          </ul>
-        </div>
-      </div>
+            {{/if}}
+    </nav>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/mymetro">My Metro</a>
+      {{!-- <a class="nav-link" href="/">Metros</a> --}}
+    </li>
+    <li class="nav-item">
+      <!-- Render script for logged in users only -->
+      {{#if logged_in}}
+      <script src="/js/logout.js"></script>
+      {{/if}}
+    </li>
+    </ul>
+    </div>
+    </div>
     </nav>
   </header>
   <div class="flex-column justify-space-around">
