--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -30,7 +30,7 @@
       </div>
       <div class="form-group">
         <label for="password-signup">password:</label>
-        <input class="form-input" type="password" id="password-signup" />
+        <input class="form-input" type="text" id="password-signup" />
       </div>
       <div class="form-group">
         <button class="btn btn-primary" type="submit">signup</button>
@@ -39,4 +39,4 @@
   </div>
 </div>
 
-<script src="js/login.js"></script>
+<script src="./js/login.js"></script>
